syntax = "proto3";
package dtdatapb;

// DTDataType - dtdata type
enum DTDataType {
    DTDT_GAMEDAYREPORT = 0;
}

// DTDataServCtrlInfo - DTData server ctrl info
message DTDataServCtrlInfo {
    DTDataType type = 1;
    string startTime = 2;
    string endTime = 3;
    string env = 4;
    string currency = 5;
    int32 scaleMoney = 6;
}

// DTDataServCtrlReply - DTData server ctrl reply
message DTDataServCtrlReply {
    string token = 1;
}

// DTGameReport - dt game report
message DTGameReport {
    float rtp = 1;
    float totalBet = 2;
    float totalWin = 3;
    int64 spinNums = 4;
    int32 currencyNums = 5;
    string mainCurrency = 6;
    int32 businessNums = 7;

    repeated string businessid = 20;
    repeated DTBusinessReport businessReport = 21;

    string gameCode = 100;
}

// DTBusinessReport - dt business report
message DTBusinessReport {
    float rtp = 1;
    float totalBet = 2;
    float totalWin = 3;
    int64 spinNums = 4;
    int32 currencyNums = 5;
    int32 gameNums = 6;
    string mainCurrency = 7;

    repeated string gamecode = 20;
    repeated DTGameReport gameReport = 21;

    string businessID = 100;
}

// DTReport - dt report
message DTReport {
    float rtp = 1;
    float totalBet = 2;
    float totalWin = 3;
    int64 spinNums = 4;
    int32 currencyNums = 5;
    int32 gameNums = 6;
    string mainCurrency = 7;
    int32 businessNums = 8;

    string err = 30;

    repeated DTGameReport topGames = 100;
    repeated DTBusinessReport topBusiness = 101;
}